# EUI-D3D

./: .gitignore  CLAUDE.md  CMakeLists.txt  main.cpp
app/: app.h  calculator.cpp  clock.cpp  demo.cpp  demo_win32_simple.cpp  dsl_app.h  gallery.cpp  my_demo.cpp  serial_tool.cpp
components/: barchart.h  button.h  checkbox.h  colorpicker.h  components.h  contextmenu.h  cube3d.h  datatable.h  datepicker.h  dialog.h  dropdown.h  image.h  input.h  linechart.h  panel.h  piechart.h  progress.h  radio.h  scroll.h  scrollview.h  segmented.h  slider.h  stepper.h  switch.h  tabs.h  text.h  theme.h  timepicker.h  toast.h
core/: animation.h  async.cpp  async.h  d3d_context.h  dsl.h  dsl_runtime.h  event.h  image.cpp  image.h  ime_bridge.c  ime_bridge.h  layout.h  network.cpp  network.h  platform.cpp  platform.h  primitive.h  text.cpp  text.h  tray_bridge.c  tray_bridge.h  win32_input_bridge.h
docs/: 动画.md  渲染流程.md
